# RPAclaw

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  rpaclaw.spec
.github/workflows/: release.yml
docs/plans/: 2026-03-09-cli-first-redesign.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: Chat.jsx  ConfigEditor.jsx  CronManager.jsx  PersonaEditor.jsx  RPAWorkflow.jsx  Sidebar.jsx  ToolManager.jsx
frontend/src/hooks/: useWebSocket.js
launchers/: start_rpaclaw.bat  start_rpaclaw.ps1  start_rpaclaw.sh
rpaclaw/: __init__.py  chat.py  main.py  rpa_skill_creator.py  setup.py
rpaclaw/channels/: dingtalk.md  feishu.md  telegram.md  wechat.md
rpaclaw/web/: api_config.py  api_rpa.py  api_tools.py  server.py
